carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/lookup-service/upstream/deployments.yaml
#@ load("@ytt:data", "data")

#! Deployment for the lookup service. It will be listening on port 8080.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookup-service
  namespace: educates
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lookup-service
  template:
    metadata:
      labels:
        app: lookup-service
    spec:
      serviceAccountName: lookup-service
      containers:
      - name: lookup-service
        image: #@ data.values.lookupServiceImage
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: cluster-access-token
          mountPath: /opt/cluster-access-token
      volumes:
      - name: cluster-access-token
        secret:
          secretName: remote-access-token
